# MarkdownWorksapce

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: editor.ts  themes.ts
