[package]
name = "markdown-studio"
version = "0.1.0"
description = "A quiet desktop Markdown reader and publisher"
authors = ["Markdown Studio"]
edition = "2021"

[lib]
name = "markdown_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0"
rusqlite = { version = "0", features = ["bundled"] }
chrono = "0"
